# transferone

./: CMakeLists.txt  CopyWorker.cpp  CopyWorker.h  MainWindow.cpp  MainWindow.h  main.cpp
.github/workflows/: build.yml
